--- a/pages/agradecimento.html
+++ b/pages/agradecimento.html
@@ -13,7 +13,7 @@
     <div class="card">
         <img src="../images/illustration-thank-you.svg" alt="ilustraçao de agradecimento">
 
-        <p>Voce selecionou 4 de 5</p>
+        <p class="nota">Voce selecionou 4 de 5</p>
 
         <h1>Obrigado!</h1>
 
